[tool.poetry]
name = "pywencai"
version = "0.8.1"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.6.8"
PyExecJS = "^1.5.1"
requests = "*"
pandas = {version = "^1.1.0 || ^2.0.0"}
fake-useragent = "^1.1.1"
pydash = {version = "^5.1.2 || ^7.0.3"}

[tool.poetry.group.dev.dependencies]
notebook = {version = "^6.4.0 || ^7.0.3"}
mypy = {version = "^0.971 || ^1.2.0"}
autopep8 = "^2.0.2"
types-requests = "^2.30.0.0"
pywin32 = "305"
pywinpty="1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
