[tool.poetry]
name = "pywencai"
version = "0.12.3"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
PyExecJS = "^1.5.1"
requests = "*"
pandas = {version = "^1.5.0 || ^2.0.0"}
fake-useragent = "^1.1.1"
pydash = "^7.0.3"

[tool.poetry.group.dev.dependencies]
notebook = "^6.4.12"
mypy = "^1.2.0"
autopep8 = "^2.0.2"
types-requests = "^2.30.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"